AIGLX/DRI1: Switch to server context for calling pScreen->GetImage.

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=16292 .